# chess-engine

./: .dockerignore  .gitignore  1712.01815v1.txt  AGENTS.md  BNAICBENELEARN_2023_paper_6.txt  Chess Engine.ipynb  Chess_Engine.ipynb  DOCKER_SETUP.md  Dockerfile  Makefile  NeurIPS-2024-enhancing-chess-reinforcement-learning-with-graph-representation-Paper-Conference.txt  Notebook (1).ipynb  PROJECT_WORK.md  README.md  ROADMAP.md  analyze_games.py  analyze_training.py  chess_engine (3).py  docker-compose.server.yml  docker-compose.yml  evaluate_elo.py  evaluate_model.py  gui.py  pyproject.toml  requirements.txt  run.sh  tasklist.md  test_dqn_phase1.py  test_gpu_configs.py  test_gpu_selection.py  test_gpu_training.py  test_model.py  test_training.py  train_dqn.py  train_hydra.py  train_hydra_plot_patch.sh
api/: main.py
conf/: config.yaml
conf/agent/: default.yaml  improved_small.yaml  large.yaml  medium.yaml  prioritized_medium.yaml  small.yaml
conf/experiment/: alphazero_baseline.yaml  baseline_large.yaml  baseline_long_cpu.yaml  baseline_medium.yaml  baseline_small.yaml  cnn_gpu_100k.yaml  cnn_gpu_10k.yaml  cnn_gpu_1k.yaml  cnn_gpu_long.yaml  eq_medium_prio.yaml  extended_training.yaml  gnn_baseline.yaml  gnn_gpu_100k.yaml  gnn_gpu_10k.yaml  gnn_gpu_1k.yaml  gnn_gpu_long.yaml  gnn_medium.yaml  gnn_pro_a40.yaml  gnn_pro_baseline.yaml  gnn_production.yaml  gpu_smoke.yaml  improved_baseline.yaml  server_intensive.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
src/: __init__.py  evaluate_elo.py  run_engine.py  training.py
(+186 files in other folders)
